ScreenBranch: use ModeChoice

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3664,8 +3664,8 @@ Class=ScreenBranch
 Choices=Credits,MusicScroll
 ConditionCredits=GetBestFinalGrade() <= Grade("AA")
 ConditionMusicScroll=true
-NextScreenCredits=ScreenCredits
-NextScreenMusicScroll=ScreenMusicScroll
+NextScreenCredits=screen,ScreenCredits
+NextScreenMusicScroll=screen,ScreenMusicScroll
 
 [EditMenu]
 Arrows1X=190
