--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3931,21 +3931,21 @@ Line8=list,SaveScores
 
 
 [ScreenCredits]
-BackgroundsBaseX=160
-BackgroundsBaseY=0
+BackgroundsX=160
+BackgroundsY=0
 BackgroundsVelocityX=0
 BackgroundsVelocityY=50
 BackgroundsSpacingX=0
 BackgroundsSpacingY=-240
 BackgroundsWidth=312
 BackgroundsHeight=232
+BackgroundsScrollSecondsPerItem=.95
+TextsScrollSecondsPerItem=.2
 TextsColorIntro=0.5,0.5,1,1
 TextsColorHeader=1,0.5,0.5,1
 TextsColorNormal=1,1,1,1
-TextsBaseX=480
-TextsBaseY=0
-TextsVelocityX=0
-TextsVelocityY=-30
+TextsX=480
+TextsY=240
 TextsSpacingX=0
 TextsSpacingY=30
 TextsZoom=0.5
