add "CancelAll" code for PlayerOptions screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3072,6 +3072,7 @@ RandomVanish=
 // next banner group is used only in the banner song select, doesnt interfere
 // with other song select.
 SaveScreenshot=MenuLeft-MenuRight-Start
+CancelAllPlayerOptions=
 
 [GrooveRadar]
 Label1OffsetX=0		// stream
