add SaveModifiers code for PlayerOptions screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3073,6 +3073,7 @@ RandomVanish=
 // with other song select.
 SaveScreenshot=MenuLeft-MenuRight-Start
 CancelAllPlayerOptions=
+SavePlayerOptions=
 
 [GrooveRadar]
 Label1OffsetX=0		// stream
