--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -4084,14 +4084,13 @@ Insert,6=mod,skippy;name,Skippy
 Insert,7=mod,echo;name,Echo
 Insert,8=mod,stomp;name,Stomp
 
-Scroll=6
-ScrollDefault=mod,no reverse,no split,no alternate,no cross,no converge
+Scroll=5
+ScrollDefault=mod,no reverse,no split,no alternate,no cross
 Scroll,1=name,Standard
 Scroll,2=mod,reverse;name,Reverse
 Scroll,3=mod,split;name,Split
 Scroll,4=mod,alternate;name,Alternate
 Scroll,5=mod,cross;name,Cross
-Scroll,6=mod,converge;name,Converge
 
 Holds=6
 HoldsDefault=mod,no noholds,no planted,no twister,no nojumps,no nohands
