tests build update

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -236,6 +236,7 @@ stepmania_LDADD = \
 # XXX: Make ArchHooks not depend on Display
 # Display depends on SaveJPEG  and SDL_utils, SDL_utils depends on SDL_rotozoom.
 all_test_SOURCES = \
+		global.cpp global.h \
 		RageDisplay.cpp RageDisplay.h \
 		SDL_SaveJPEG.cpp SDL_SaveJPEG.h SDL_utils.cpp SDL_utils.h SDL_rotozoom.cpp SDL_rotozoom.h \
 		RageMath.cpp RageMath.h \
@@ -244,7 +245,6 @@ all_test_SOURCES = \
 		RageTimer.cpp RageTimer.h \
 		$(RageFile) \
 		PrefsManager.cpp PrefsManager.h \
-		Grade.cpp Grade.h \
 		arch/ArchHooks/ArchHooks.cpp arch/ArchHooks/ArchHooks.h \
 		IniFile.cpp IniFile.h \
 		$(PCRE)
