add PerDifficulty and PeakCombo awards

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1147,6 +1147,7 @@ Class=ScreenEvaluation
 FailedSoundTime=0
 PassedSoundTime=0
 NumSequenceSounds=0
+PeakComboAwardCommand=
 
 [ScreenEvaluationStage]
 Fallback=ScreenEvaluation
@@ -1177,7 +1178,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
-ShowFullCombo=0
+ShowPerDifficultyAward=0
 TimerSeconds=15
 StyleIcon=1
 MemoryCardIcons=1
@@ -1481,7 +1482,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
-ShowFullCombo=0
+ShowPerDifficultyAward=0
 TimerSeconds=30
 StyleIcon=1
 MemoryCardIcons=1
@@ -1786,7 +1787,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
-ShowFullCombo=0
+ShowPerDifficultyAward=0
 TimerSeconds=30
 StyleIcon=1
 ShowTotalScoreArea=0
@@ -1999,7 +2000,7 @@ ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
 ShowComboArea=0
-ShowFullCombo=0
+ShowPerDifficultyAward=0
 TimerSeconds=30
 StyleIcon=1
 ShowTotalScoreArea=0
@@ -2212,7 +2213,7 @@ ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
 ShowComboArea=0
-ShowFullCombo=0
+ShowPerDifficultyAward=0
 TimerSeconds=30
 StyleIcon=1
 ShowTotalScoreArea=0
@@ -2437,7 +2438,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
-ShowFullCombo=0
+ShowPerDifficultyAward=0
 TimerSeconds=15
 StyleIcon=1
 ShowTotalScoreArea=0
