--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -82,7 +82,7 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="./../Program"
+			OutputDirectory="./../../itg/Program"
 			IntermediateDirectory="./../Release"
 			ConfigurationType="1"
 			UseOfMFC="0"
@@ -174,6 +174,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 			</File>
 			<File
 				RelativePath="ScreenAttract.h">
+			</File>
+			<File
+				RelativePath="ScreenAward.cpp">
+			</File>
+			<File
+				RelativePath="ScreenAward.h">
 			</File>
 			<File
 				RelativePath="ScreenBookkeeping.cpp">
