move empty score name logic into HighScore add FOV to ScreenNameEntryTraditional

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3496,7 +3496,6 @@ NextScreen=ScreenUnlock
 
 SecondsPerPage=10
 PageFadeSeconds=1.0
-EmptyScoreName=STEP
 NoScoreName=STEP
 
 RowSpacingX=0
@@ -4279,6 +4278,8 @@ VerificationInstructions=
 07=D
 Failed=E
 
+[HighScore]
+EmptyName=STEP
 
 
 
