add "disqualify" graphic to options screen for options that make a song easier

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2847,6 +2847,14 @@ ExplanationTogetherOnCommand=wrapwidthpixels,1000;horizalign,left;cropright,1;li
 ExplanationZoom=0.5
 ExplanationP1OnCommand=wrapwidthpixels,500;horizalign,left;cropright,1;linear,0.5;cropright,0
 ExplanationP2OnCommand=wrapwidthpixels,500;horizalign,right;cropright,1;linear,0.5;cropright,0
+DisqualifyP1X=0
+DisqualifyP1Y=0
+DisqualifyP1OnCommand=
+DisqualifyP1OffCommand=
+DisqualifyP2X=0
+DisqualifyP2Y=0
+DisqualifyP2OnCommand=
+DisqualifyP2OffCommand=
 PlayerNameP1X=0
 PlayerNameP1Y=0
 PlayerNameP1OnCommand=hidden,1
