--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1149,6 +1149,15 @@ PassedSoundTime=0
 NumSequenceSounds=0
 PeakComboAwardCommand=
 
+DisqualifiedP1X=0
+DisqualifiedP1Y=0
+DisqualifiedP1OffCommand=
+DisqualifiedP1OnCommand=
+DisqualifiedP2X=0
+DisqualifiedP2Y=0
+DisqualifiedP2OffCommand=
+DisqualifiedP2OnCommand=
+
 [ScreenEvaluationStage]
 Fallback=ScreenEvaluation
 NextScreen=ScreenSelectMusic
