color the combo when full combo in progress

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2997,6 +2997,10 @@ NumberMaxZoom=0.9
 NumberMaxZoomAt=300
 PulseZoom=1.2
 TweenSeconds=0.05
+FullComboGreatsCommand=
+FullComboPerfectsCommand=
+FullComboMarvelousesCommand=
+FullComboBrokenCommand=
 
 [Player]
 ReceptorArrowsYStandard=96
