add graphic for ScreenPlayerOptions CancelAll

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3902,6 +3902,13 @@ Line13=Steps
 Line14=Characters
 Line15=SaveToProfile
 
+CancelAllP1X=
+CancelAllP1Y=
+CancelAllP1OnCommand=
+CancelAllP2X=
+CancelAllP2Y=
+CancelAllP2OnCommand=
+
 [ScreenRaveOptions]
 PrevScreen=ScreenSelectMusic
 NextScreen=ScreenStage
