add graphic for ScreenPlayerOptions CancelAll

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3905,9 +3905,11 @@ Line15=SaveToProfile
 CancelAllP1X=
 CancelAllP1Y=
 CancelAllP1OnCommand=
+CancelAllP1ShowCommand=
 CancelAllP2X=
 CancelAllP2Y=
 CancelAllP2OnCommand=
+CancelAllP2ShowCommand=
 
 [ScreenRaveOptions]
 PrevScreen=ScreenSelectMusic
