add graphic for courses that have mods

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -727,6 +727,10 @@ BalloonX=392
 BalloonY=140
 BalloonOnCommand=linear,0.2;zoomy,1;bob;effectmagnitude,0,10,0
 BalloonOffCommand=linear,0.2;zoomy,0
+CourseHasModsX=
+CourseHasModsY=
+CourseHasModsOffCommand=
+CourseHasModsOnCommand=
 OptionsMessageX=320
 OptionsMessageY=240
 OptionsMessageOnCommand=zoomy,0;linear,0.25;zoomy,1;sleep,1;linear,0.25;zoomy,0
