--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3788,7 +3788,7 @@ PrevScreen=ScreenTitleMenu
 # when using entries that change the screen; otherwise, the only way to
 # exit the screen when in arcade mode is "exit".
 
-LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
+LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
 OptionMenuFlags=together;forceallplayers;smnavigation
 # This NextScreen is only used for the "exit" choice.
 Line1=list,Appearance Options
@@ -3797,15 +3797,16 @@ Line3=list,Bookkeeping
 Line4=list,Center Image
 Line5=list,Coin Options
 Line6=list,Config Key/Joy Mappings
-Line7=list,Input Options
-Line8=list,Gameplay Options
-Line9=list,Graphic Options
-Line10=list,Machine Options
-Line11=list,Sound Options
-Line12=list,Profile Options
-Line13=list,Other Options
-Line14=list,Reload Songs/Courses
-Line15=list,Test Input
+Line7=list,Download Machine Stats
+Line8=list,Input Options
+Line9=list,Gameplay Options
+Line10=list,Graphic Options
+Line11=list,Machine Options
+Line12=list,Sound Options
+Line13=list,Profile Options
+Line14=list,Other Options
+Line15=list,Reload Songs/Courses
+Line16=list,Test Input
 
 [TextBanner]
 TitleX=-90
@@ -4243,6 +4244,9 @@ Coin Options,1=screen,ScreenCoinOptions;name,CoinOptions
 Config Key/Joy Mappings=1,together
 Config Key/Joy MappingsDefault=
 Config Key/Joy Mappings,1=screen,ScreenMapControllers;name,KeyJoyMappings
+Download Machine Stats=1,together
+Download Machine StatsDefault=
+Download Machine Stats,1=screen,ScreenDownloadMachineStats;name,DownloadMachineStats
 Input Options=1,together
 Input OptionsDefault=
 Input Options,1=screen,ScreenInputOptions;name,InputOptions
@@ -4314,5 +4318,7 @@ Failed=E
 [HighScore]
 EmptyName=STEP
 
+[ScreenDownloadMachineStats]
+NextScreen=ScreenOptionsMenu
 
 
