--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -221,6 +221,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="ScreenDimensions.h">
 			</File>
 			<File
+				RelativePath="ScreenDownloadMachineStats.cpp">
+			</File>
+			<File
+				RelativePath="ScreenDownloadMachineStats.h">
+			</File>
+			<File
 				RelativePath="ScreenEdit.cpp">
 			</File>
 			<File
