--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3788,7 +3788,7 @@ PrevScreen=ScreenTitleMenu
 # when using entries that change the screen; otherwise, the only way to
 # exit the screen when in arcade mode is "exit".
 
-LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
+LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17
 OptionMenuFlags=together;forceallplayers;smnavigation
 # This NextScreen is only used for the "exit" choice.
 Line1=list,Appearance Options
@@ -3807,6 +3807,7 @@ Line13=list,Profile Options
 Line14=list,Other Options
 Line15=list,Reload Songs/Courses
 Line16=list,Test Input
+Line17=list,Set Machine Time
 
 [TextBanner]
 TitleX=-90
@@ -4234,7 +4235,7 @@ Background OptionsDefault=
 Background Options,1=screen,ScreenBackgroundOptions;name,BackgroundOptions
 Bookkeeping=1,together
 BookkeepingDefault=
-Bookkeeping,1=screen,ScreenBookkeeping;name,Bookkeeping
+Bookkeeping,1=screen,ScreenSetTime;name,Bookkeeping
 Center Image=1,together
 Center ImageDefault=
 Center Image,1=screen,ScreenCenterImage;name,CenterImage
@@ -4271,6 +4272,9 @@ Reload Songs/Courses,1=screen,ScreenReloadSongs;name,ReloadSongs
 Test Input=1,together
 Test InputDefault=
 Test Input,1=screen,ScreenTestInput;name,TestInput
+Set Machine Time=1,together
+Set Machine TimeDefault=
+Set Machine Time,1=screen,ScreenSetTime;name,SetMachineTime
 
 [DancingCharacters]
 #2D Character X/Y positions in relation to the center
@@ -4321,4 +4325,7 @@ EmptyName=STEP
 [ScreenDownloadMachineStats]
 NextScreen=ScreenOptionsMenu
 
-
+[ScreenSetTime]
+StyleIcon=0
+MemoryCardIcons=0
+TimerSeconds=0
