--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -4235,7 +4235,7 @@ Background OptionsDefault=
 Background Options,1=screen,ScreenBackgroundOptions;name,BackgroundOptions
 Bookkeeping=1,together
 BookkeepingDefault=
-Bookkeeping,1=screen,ScreenSetTime;name,Bookkeeping
+Bookkeeping,1=screen,ScreenBookkeeping;name,Bookkeeping
 Center Image=1,together
 Center ImageDefault=
 Center Image,1=screen,ScreenCenterImage;name,CenterImage
