--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -1,6 +1,8 @@
 bin_PROGRAMS = stepmania
+TESTS = test_audio_readers test_file_readers test_timing_data test_threads
+tests: $(TESTS)
 if BUILD_TESTS
-bin_PROGRAMS += test_audio_readers test_file_readers test_timing_data test_threads
+bin_PROGRAMS += $(TESTS)
 endif
 
 AM_LDFLAGS =
