I have modified SM files to add network support. I tested this under linux AND windows. There should be no issues, if there is, feel free to use AIM to IM me at CNLohr, or email me, webmaster@cnlohr.com.
I modified the .dsp and Makefile.am only to add
networksyncmanager and ezsockets.

I added some startup code to stepmania.cpp,
so that if the user does not desire network support
none will be enabled.

Scorekeeper and screengameplay are modified
so that information can be sent to the server as
well as allowing the game sync to work.

Thanks.

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -220,10 +220,10 @@ Quad.h Sprite.cpp Sprite.h
 
 GlobalSingletons = \
 AnnouncerManager.cpp AnnouncerManager.h Bookkeeper.h Bookkeeper.cpp CryptManager.cpp CryptManager.h FontManager.cpp FontManager.h GameManager.cpp GameManager.h \
-GameState.cpp GameState.h InputFilter.cpp InputFilter.h InputMapper.cpp InputMapper.h InputQueue.cpp InputQueue.h \
+GameState.cpp GameState.h InputFilter.cpp InputFilter.h InputMapper.cpp InputMapper.h InputQueue.cpp InputQueue.h ezsockets.cpp ezsockets.h NetworkSyncManager.cpp NetworkSyncManager.h\
 LightsManager.cpp LightsManager.h MemoryCardManager.cpp MemoryCardManager.h NoteSkinManager.cpp NoteSkinManager.h PrefsManager.cpp PrefsManager.h \
 ProfileManager.cpp ProfileManager.h ScreenManager.cpp ScreenManager.h SongManager.cpp SongManager.h ThemeManager.cpp ThemeManager.h \
-UnlockSystem.cpp UnlockSystem.h
+UnlockSystem.cpp UnlockSystem.h 
 
 crypto = \
 crypto/CryptBn.cpp crypto/CryptMD5.cpp crypto/CryptNoise.cpp crypto/CryptPrime.cpp crypto/CryptRand.cpp \
