--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1097,38 +1097,14 @@ LyricsReverseY=100
 LyricsOneReverseX=320
 LyricsOneReverseY=35
 LyricsDefaultColor=0,1,0,1
-ActiveItemsP1X=0
-ActiveItemsP1Y=0
-ActiveItemsP1OnCommand=
-ActiveItemsP1OffCommand=
-ActiveItemsP1ReverseX=0
-ActiveItemsP1ReverseY=0
-ActiveItemsP1ReverseOnCommand=
-ActiveItemsP1ReverseOffCommand=
-ActiveItemsP1ExtraX=0
-ActiveItemsP1ExtraY=0
-ActiveItemsP1ExtraOnCommand=
-ActiveItemsP1ExtraOffCommand=
-ActiveItemsP1ExtraReverseX=0
-ActiveItemsP1ExtraReverseY=0
-ActiveItemsP1ExtraReverseOnCommand=
-ActiveItemsP1ExtraReverseOffCommand=
-ActiveItemsP2X=0
-ActiveItemsP2Y=0
-ActiveItemsP2OnCommand=
-ActiveItemsP2OffCommand=
-ActiveItemsP2ReverseX=0
-ActiveItemsP2ReverseY=0
-ActiveItemsP2ReverseOnCommand=
-ActiveItemsP2ReverseOffCommand=
-ActiveItemsP2ExtraX=0
-ActiveItemsP2ExtraY=0
-ActiveItemsP2ExtraOnCommand=
-ActiveItemsP2ExtraOffCommand=
-ActiveItemsP2ExtraReverseX=0
-ActiveItemsP2ExtraReverseY=0
-ActiveItemsP2ExtraReverseOnCommand=
-ActiveItemsP2ExtraReverseOffCommand=
+ActiveAttackListP1X=
+ActiveAttackListP1Y=
+ActiveAttackListP1OnCommand=hidden,1
+ActiveAttackListP1OffCommand=
+ActiveAttackListP2X=
+ActiveAttackListP2Y=
+ActiveAttackListP2OnCommand=hidden,1
+ActiveAttackListP2OffCommand=
 SurviveTimeX=320
 SurviveTimeY=340
 SurviveTimeOnCommand=sleep,0.3;linear,0.3;diffusealpha,1;sleep,3.5;linear,0.5;diffusealpha,0
