Makefile fix. Was not compiling ActiveAttackList at all. -- Matriark

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -164,7 +164,7 @@ DifficultyIcon.cpp DifficultyIcon.h MeterDisplay.cpp MeterDisplay.h Transition.c
 ConditionalBGA.cpp ConditionalBGA.h
 
 ActorsInMenus = \
-BPMDisplay.cpp BPMDisplay.h ComboGraph.cpp ComboGraph.h CourseContentsList.cpp CourseContentsList.h \
+ActiveAttackList.cpp ActiveAttackList.h BPMDisplay.cpp BPMDisplay.h ComboGraph.cpp ComboGraph.h CourseContentsList.cpp CourseContentsList.h \
 CourseEntryDisplay.cpp CourseEntryDisplay.h DifficultyDisplay.cpp DifficultyDisplay.h DifficultyList.cpp DifficultyList.h \
 DifficultyMeter.cpp DifficultyMeter.h DifficultyRating.cpp DifficultyRating.h EditCoursesMenu.cpp EditCoursesMenu.h \
 EditMenu.cpp EditMenu.h FadingBanner.cpp FadingBanner.h GradeDisplay.cpp GradeDisplay.h GraphDisplay.cpp GraphDisplay.h \
