--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1303,6 +1303,7 @@ OKNumberP2X=410
 OKNumberP2Y=352
 OKNumberP2OnCommand=addx,320;sleep,0.7;decelerate,0.3;addx,-320
 OKNumberP2OffCommand=sleep,0.1;accelerate,0.3;addx,320
+MaxComboMaxDigits=4
 MaxComboLabelX=0
 MaxComboLabelY=0
 MaxComboLabelOnCommand=diffusealpha,0
@@ -1598,6 +1599,7 @@ OKNumberP2X=410
 OKNumberP2Y=352
 OKNumberP2OnCommand=addx,320;sleep,0.7;decelerate,0.3;addx,-320
 OKNumberP2OffCommand=sleep,0.1;accelerate,0.3;addx,320
+MaxComboMaxDigits=4
 MaxComboLabelX=0
 MaxComboLabelY=0
 MaxComboLabelOnCommand=diffusealpha,0
@@ -1900,6 +1902,7 @@ OKNumberP2X=410
 OKNumberP2Y=352
 OKNumberP2OnCommand=addx,320;sleep,0.7;decelerate,0.3;addx,-320
 OKNumberP2OffCommand=sleep,0.1;accelerate,0.3;addx,320
+MaxComboMaxDigits=4
 MaxComboLabelX=0
 MaxComboLabelY=0
 MaxComboLabelOnCommand=diffusealpha,0
@@ -2113,6 +2116,7 @@ OKNumberP2X=410
 OKNumberP2Y=352
 OKNumberP2OnCommand=addx,320;sleep,0.7;decelerate,0.3;addx,-320
 OKNumberP2OffCommand=sleep,0.1;accelerate,0.3;addx,320
+MaxComboMaxDigits=4
 MaxComboLabelX=0
 MaxComboLabelY=0
 MaxComboLabelOnCommand=diffusealpha,0
@@ -2326,6 +2330,7 @@ OKNumberP2X=410
 OKNumberP2Y=352
 OKNumberP2OnCommand=addx,320;sleep,0.7;decelerate,0.3;addx,-320
 OKNumberP2OffCommand=sleep,0.1;accelerate,0.3;addx,320
+MaxComboMaxDigits=4
 MaxComboLabelX=0
 MaxComboLabelY=0
 MaxComboLabelOnCommand=diffusealpha,0
@@ -2566,6 +2571,7 @@ OKNumberP2X=410
 OKNumberP2Y=352
 OKNumberP2OnCommand=addx,320;sleep,0.7;decelerate,0.3;addx,-320
 OKNumberP2OffCommand=sleep,0.1;accelerate,0.3;addx,320
+MaxComboMaxDigits=4
 MaxComboLabelX=0
 MaxComboLabelY=0
 MaxComboLabelOnCommand=diffusealpha,0
@@ -2894,6 +2900,12 @@ TimerSeconds=0
 StyleIcon=0
 MemoryCardIcons=0
 TimerSeconds=0
+
+[ScreenTestLights]
+StyleIcon=0
+MemoryCardIcons=0
+TimerSeconds=0
+Fallback=ScreenTestInput
 
 [ScreenBookkeeping]
 StyleIcon=0
@@ -3764,7 +3776,7 @@ PrevScreen=ScreenTitleMenu
 # when using entries that change the screen; otherwise, the only way to
 # exit the screen when in arcade mode is "exit".
 
-LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17
+LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18
 OptionMenuFlags=together;forceallplayers;smnavigation
 # This NextScreen is only used for the "exit" choice.
 Line1=list,Appearance Options
@@ -3783,7 +3795,8 @@ Line13=list,Profile Options
 Line14=list,Other Options
 Line15=list,Reload Songs/Courses
 Line16=list,Test Input
-Line17=list,Set Machine Time
+Line17=list,Test Lights
+Line18=list,Set Machine Time
 
 [TextBanner]
 TitleX=-90
@@ -4248,6 +4261,9 @@ Reload Songs/Courses,1=screen,ScreenReloadSongs;name,ReloadSongs
 Test Input=1,together
 Test InputDefault=
 Test Input,1=screen,ScreenTestInput;name,TestInput
+Test Lights=1,together
+Test LightsDefault=
+Test Lights,1=screen,ScreenTestLights;name,TestLights
 Set Machine Time=1,together
 Set Machine TimeDefault=
 Set Machine Time,1=screen,ScreenSetTime;name,SetMachineTime
