--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2971,6 +2971,10 @@ BooCommand=shadowlength,4;diffusealpha,1;zoom,1.0;vibrate;effectmagnitude,4,8,8;
 MissCommand=shadowlength,4;diffusealpha,1;zoom,1;y,-20;linear,0.8;y,20;sleep,0.8;linear,0;diffusealpha,0
 
 [HoldJudgment]
+NGOddCommand=
+OKOddCommand=
+NGEvenCommand=
+OKEvenCommand=
 NGCommand=shadowlength,4;diffusealpha,1;zoom,1;y,-10;linear,0.8;y,10;sleep,0.5;linear,0;diffusealpha,0
 OKCommand=shadowlength,4;diffusealpha,1;zoom,1.25;linear,0.3;zoomx,1;zoomy,1;sleep,0.5;linear,0;diffusealpha,0
 
