--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -17,6 +17,7 @@ ColorP2=1.0,0.5,0.2,1		// orange
 InitialScreen=ScreenCompany
 WindowTitle=StepMania
 DefaultModifiers=
+JoinDelaySeconds=0.8
 
 [ModeSwitcher]
 PrevModeX=-200
