--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -17,7 +17,7 @@ ColorP2=1.0,0.5,0.2,1		// orange
 InitialScreen=ScreenCompany
 WindowTitle=StepMania
 DefaultModifiers=
-JoinDelaySeconds=0.8
+JoinPauseSeconds=0.8
 
 [ModeSwitcher]
 PrevModeX=-200
@@ -64,6 +64,8 @@ LogoHomeOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;
 LogoOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 VersionOnCommand=horizalign,right;x,620;y,20;diffuse,0.6,0.6,0.6,1;zoom,0.5;shadowlength,2
 SongsOnCommand=horizalign,left;x,20;y,20;diffuse,0.6,0.6,0.6,1;zoom,0.5;shadowlength,2
+MaxStagesOnCommand=hidden,1
+MaxStagesText=
 ChoicesX=320
 ChoicesStartY=86
 ChoicesSpacingY=48
