--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1141,6 +1141,17 @@ DisqualifiedP2Y=0
 DisqualifiedP2OffCommand=
 DisqualifiedP2OnCommand=
 
+DifficultyIconP1X=0
+DifficultyIconP1Y=0
+DifficultyIconP1OnCommand=hidden,1
+DifficultyIconP1OffCommand=
+DifficultyIconP2X=0
+DifficultyIconP2Y=0
+DifficultyIconP2OnCommand=hidden,1
+DifficultyIconP2OffCommand=
+PlayerOptionsSeparator=,
+MaxComboNumDigits=4
+
 [ScreenEvaluationStage]
 Fallback=ScreenEvaluation
 NextScreen=ScreenSelectMusic
